@@ -20,6 +20,8 @@ package org.apache.giraph.graph;
 
 import org.apache.giraph.ImmutableClassesGiraphConfigurable;
 import org.apache.giraph.ImmutableClassesGiraphConfiguration;
+import org.apache.giraph.comm.WorkerClientServer;
+import org.apache.giraph.graph.partition.PartitionOwner;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.mapreduce.Mapper;
@@ -219,8 +221,41 @@ public abstract class Vertex<I extends WritableComparable,
       throw new IllegalArgumentException(
           "sendMessage: Cannot send null message to " + id);
     }
-    getGraphState().getWorkerCommunications().
-        sendMessageRequest(id, message);
+    getWorkerCommunications().sendMessageRequest(id, message);
+  }
+
+  /**
+   * Lookup WorkerInfo for myself.
+   * @return WorkerInfo about worker holding this Vertex.
+   */
+  public WorkerInfo getMyWorkerInfo() {
+    return getVertexWorkerInfo(id);
+  }
+
+  /**
+   * Lookup WorkerInfo for a Vertex.
+   * @param vertexId VertexId to lookup
+   * @return WorkerInfo about worker holding this Vertex.
+   */
+  public WorkerInfo getVertexWorkerInfo(I vertexId) {
+    return getVertexPartitionOwner(vertexId).getWorkerInfo();
+  }
+
+  /**
+   * Lookup PartitionOwner for a Vertex
+   * @param vertexId id of Vertex to look up.
+   * @return PartitionOwner holding Vertex
+   */
+  private PartitionOwner getVertexPartitionOwner(I vertexId) {
+    return getWorkerCommunications().getVertexPartitionOwner(vertexId);
+  }
+
+  /**
+   * Get WorkerClientServer used to communicate with other servers.
+   * @return WorkerClientServer used.
+   */
+  private WorkerClientServer<I, V, E, M> getWorkerCommunications() {
+    return getGraphState().getWorkerCommunications();
   }
 
   /**
