@@ -1,6 +1,7 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-367: Expose WorkerInfo to clients (Nitay Joffe via ereisman)
 
   GIRAPH-370: AccumuloVertexOutputFormat public visibility for
   TABLE_NAME. (bfem via aching)
